Use single AUTHS options for single and multiple auths